Added pb update-os-alldist

--- a/update-os-alldist.yml
+++ b/update-os-alldist.yml
@@ -10,6 +10,14 @@
       apt: update_cache=yes force_apt_get=yes cache_valid_time=3600
       when: ansible_distribution == 'Ubuntu'
 
-    - name: Upgrade all packages on servers
+    - name: Upgrade all packages on Ubuntu servers
       apt: upgrade=dist force_apt_get=yes
       when: ansible_distribution == 'Ubuntu'
+
+    - name: Update yum repo cache on all CentOS boxes
+      yum: update_cache=yes
+      when: ansible_distribution=='CentOS'
+
+    - name: Upgrade all packages on all CentOS servers
+      yum: name=* state=latest
+      when: ansible_distribution=='CentOS'
